--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-.DS_Store
-
+.idea
+.webpack
+.serverless
+.env
+.npmrc
+lerna-debug.log
+npm-debug.log
 node_modules
-
-lib/core/metadata.js
-lib/core/MetadataBlog.js
-
-website/translated_docs
-website/build/
-website/yarn.lock
-website/node_modules
-website/i18n/*
+.DS_Store
+coverage
+yarn-error.log
+dist/
+build/
+packages/demo-api/static/
