--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-.idea
-.webpack
-.serverless
-.env
-.npmrc
-lerna-debug.log
-npm-debug.log
+# dependencies
 node_modules
+# production
+build
+# generated files
+.docusaurus
+.cache-loader
+# misc
 .DS_Store
-coverage
-yarn-error.log
-dist/
-build/
-packages/demo-api/static/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.idea
