--- a/website/package.json
+++ b/website/package.json
@@ -11,5 +11,8 @@
     "classnames": "^2.2.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
+  },
+  "dependencies": {
+    "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.23"
   }
 }
