Add @Pavel910 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,16 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Pavel910",
+      "name": "Pavel Denisjuk",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/3920893?v=4",
+      "profile": "http://webiny.com/",
+      "contributions": [
+        "doc",
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
