--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,6 +28,15 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "doitadrian",
+      "name": "Adrian Smijulj",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/5121148?v=4",
+      "profile": "https://www.webiny.com",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
