Add @12vanblart as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -37,6 +37,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "12vanblart",
+      "name": "Tyler VanBlargan",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/16465776?v=4",
+      "profile": "https://tyler.vanblargan.dev",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
