Add @llwp as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -46,6 +46,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "llwp",
+      "name": "Adam John",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/9566542?v=4",
+      "profile": "https://github.com/llwp",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
