Add @dorelljames as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -55,6 +55,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "dorelljames",
+      "name": "Dorell James",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/977413?v=4",
+      "profile": "https://dorelljames.com",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
