Add @danruss as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -64,6 +64,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "danruss",
+      "name": "danruss",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/815250?v=4",
+      "profile": "https://github.com/danruss",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
