Update @SvenAlHamad as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,8 @@
       "avatar_url": "https://avatars3.githubusercontent.com/u/3808420?v=4",
       "profile": "http://www.webiny.com/",
       "contributions": [
-        "doc"
+        "doc",
+        "code"
       ]
     },
     {
