--- a/website/package.json
+++ b/website/package.json
@@ -1,4 +1,4 @@
-{
+1{
   "scripts": {
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -6,8 +6,8 @@
     "deploy": "docusaurus deploy"
   },
   "devDependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.30",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.30",
+    "@docusaurus/core": "2.0.0-alpha.30",
+    "@docusaurus/preset-classic": "2.0.0-alpha.30",
     "classnames": "^2.2.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
