--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.11.0"
   },
   "dependencies": {
-    "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.58"
+    "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.58",
+    "wts": "https://github.com/webiny/wts"
   }
 }
