--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.66",
+    "theme-ui": "^0.3.1",
     "wts": "https://github.com/webiny/wts"
   }
 }
