chore: reformat files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/webiny/webiny-js.git"
+  },
   "devDependencies": {
     "all-contributors-cli": "^6.13.0",
     "prettier": "^1.19.1"
+  },
+  "scripts": {
+    "prettier": "prettier \"**/**/*.{js}\" --config .prettierrc.js",
+    "prettier:check": "yarn prettier --check",
+    "prettier:fix": "yarn prettier --write"
   }
 }
