--- a/package.json
+++ b/package.json
@@ -6,11 +6,24 @@
   },
   "devDependencies": {
     "all-contributors-cli": "^6.13.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^7.2.2",
     "prettier": "^1.19.1"
   },
   "scripts": {
-    "prettier": "prettier \"**/**/*.{js}\" --config .prettierrc.js",
+    "lint-staged": "lint-staged",
+    "prettier": "prettier \"website/**/*.js\" --config .prettierrc.js",
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "prettier --check"
+    ]
   }
 }
