chore: adjust vale configs

--- a/.vale/webiny/Acronyms.yml
+++ b/.vale/webiny/Acronyms.yml
@@ -56,6 +56,7 @@ exceptions:
   - LRU
   - MIME
   - MVC
+  - NAT
   - NFS
   - NGINX
   - NOTE
@@ -78,9 +79,11 @@ exceptions:
   - SCP
   - SCSS
   - SDK
+  - SEO
   - SHA
   - SLA
   - SMTP
+  - SPA
   - SQL
   - SSH
   - SSL
