--- a/website/package.json
+++ b/website/package.json
@@ -44,6 +44,7 @@
     "react": "^17.0.1",
     "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
+    "react-image-lightbox": "^5.1.1",
     "theme-ui": "^0.3.1",
     "workbox-routing": "^5.0.0",
     "workbox-strategies": "^5.0.0",
