--- a/website/package.json
+++ b/website/package.json
@@ -48,7 +48,7 @@
     "theme-ui": "^0.3.1",
     "workbox-routing": "^5.0.0",
     "workbox-strategies": "^5.0.0",
-    "wts": "https://github.com/webiny/wts"
+    "wts": "https://github.com/webiny/wts#2974b504490225466e4a30e13cfb0afdbf242370"
   },
   "browserslist": {
     "production": [
