--- a/website/package.json
+++ b/website/package.json
@@ -37,6 +37,7 @@
     "@docusaurus/preset-classic": "^2.0.0-alpha.72",
     "@docusaurus/remark-plugin-npm2yarn": "2.0.0-alpha.72",
     "@docusaurus/theme-live-codeblock": "2.0.0-alpha.72",
+    "case": "^1.6.3",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "color": "^3.1.3",
