--- a/website/package.json
+++ b/website/package.json
@@ -29,14 +29,14 @@
   },
   "dependencies": {
     "@crowdin/cli": "^3.5.2",
-    "@docusaurus/core": "^2.0.0-alpha.72",
-    "@docusaurus/plugin-client-redirects": "^2.0.0-alpha.72",
-    "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.72",
-    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.72",
-    "@docusaurus/plugin-pwa": "2.0.0-alpha.72",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.72",
-    "@docusaurus/remark-plugin-npm2yarn": "2.0.0-alpha.72",
-    "@docusaurus/theme-live-codeblock": "2.0.0-alpha.72",
+    "@docusaurus/core": "^2.0.0-beta.9",
+    "@docusaurus/plugin-client-redirects": "^2.0.0-beta.9",
+    "@docusaurus/plugin-google-analytics": "^2.0.0-beta.9",
+    "@docusaurus/plugin-ideal-image": "2.0.0-beta.9",
+    "@docusaurus/plugin-pwa": "2.0.0-beta.9",
+    "@docusaurus/preset-classic": "^2.0.0-beta.9",
+    "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.9",
+    "@docusaurus/theme-live-codeblock": "2.0.0-beta.9",
     "case": "^1.6.3",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
