chore: configure workspaces and sync docusaurus package versions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "private": true,
+  "workspaces": {
+    "packages": [
+      "website"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/webiny/webiny-js.git"
@@ -26,7 +31,5 @@
       "prettier --check"
     ]
   },
-  "resolutions": {
-    "**/terser-webpack-plugin": "1.4.3"
-  }
+  "packageManager": "yarn@2.4.3"
 }
