--- a/website/package.json
+++ b/website/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "website",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
@@ -29,14 +30,14 @@
   },
   "dependencies": {
     "@crowdin/cli": "^3.5.2",
-    "@docusaurus/core": "^2.0.0-beta.9",
-    "@docusaurus/plugin-client-redirects": "^2.0.0-beta.9",
-    "@docusaurus/plugin-google-analytics": "^2.0.0-beta.9",
-    "@docusaurus/plugin-ideal-image": "2.0.0-beta.9",
-    "@docusaurus/plugin-pwa": "2.0.0-beta.9",
-    "@docusaurus/preset-classic": "^2.0.0-beta.9",
-    "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.9",
-    "@docusaurus/theme-live-codeblock": "2.0.0-beta.9",
+    "@docusaurus/core": "2.0.0-beta.14",
+    "@docusaurus/plugin-client-redirects": "2.0.0-beta.14",
+    "@docusaurus/plugin-google-analytics": "2.0.0-beta.14",
+    "@docusaurus/plugin-ideal-image": "2.0.0-beta.14",
+    "@docusaurus/plugin-pwa": "2.0.0-beta.14",
+    "@docusaurus/preset-classic": "2.0.0-beta.14",
+    "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.14",
+    "@docusaurus/theme-live-codeblock": "2.0.0-beta.14",
     "case": "^1.6.3",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
