--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
       "prettier --check"
     ]
   },
-  "packageManager": "yarn@2.4.3"
+  "packageManager": "yarn@2.4.3",
+  "resolutions": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  }
 }
