--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "packageManager": "yarn@2.4.3",
   "resolutions": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@types/react": "16.14.2",
+    "react": "16.14.0",
+    "react-dom": "16.14.0"
   }
 }
