chore: update deps

--- a/package.json
+++ b/package.json
@@ -31,10 +31,5 @@
       "prettier --check"
     ]
   },
-  "packageManager": "yarn@3.1.1",
-  "resolutions": {
-    "@types/react": "16.14.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0"
-  }
+  "packageManager": "yarn@3.1.1"
 }
