--- a/website/package.json
+++ b/website/package.json
@@ -29,8 +29,8 @@
     "netlify:test": "yarn netlify:build:deployPreview && yarn netlify dev --debug"
   },
   "dependencies": {
-    "@babel/core": "^7.16.10",
-    "@crowdin/cli": "^3.5.2",
+    "@babel/core": "7.16.10",
+    "@crowdin/cli": "3.5.2",
     "@docusaurus/core": "2.0.0-beta.9",
     "@docusaurus/plugin-client-redirects": "2.0.0-beta.9",
     "@docusaurus/plugin-google-analytics": "2.0.0-beta.9",
@@ -39,19 +39,19 @@
     "@docusaurus/preset-classic": "2.0.0-beta.9",
     "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.9",
     "@docusaurus/theme-live-codeblock": "2.0.0-beta.9",
-    "case": "^1.6.3",
-    "classnames": "^2.2.6",
-    "clsx": "^1.1.1",
-    "color": "^3.1.3",
-    "npm-to-yarn": "^1.0.0-2",
-    "react": "^16.14.0",
-    "react-device-detect": "^1.15.0",
-    "react-dom": "^16.14.0",
-    "react-image-lightbox": "^5.1.1",
-    "theme-ui": "^0.3.1",
-    "webpack": "^5.66.0",
-    "workbox-routing": "^5.0.0",
-    "workbox-strategies": "^5.0.0",
+    "case": "1.6.3",
+    "classnames": "2.2.6",
+    "clsx": "1.1.1",
+    "color": "3.1.3",
+    "npm-to-yarn": "1.0.0-2",
+    "react": "16.14.0",
+    "react-device-detect": "1.15.0",
+    "react-dom": "16.14.0",
+    "react-image-lightbox": "5.1.1",
+    "theme-ui": "0.3.1",
+    "webpack": "5.66.0",
+    "workbox-routing": "5.0.0",
+    "workbox-strategies": "5.0.0",
     "wts": "https://github.com/webiny/wts#2811da54b0b21e61dc79cf63509d1165f95a2308"
   },
   "browserslist": {
