--- a/website/package.json
+++ b/website/package.json
@@ -44,11 +44,14 @@
     "clsx": "1.1.1",
     "color": "3.1.3",
     "npm-to-yarn": "1.0.0-2",
+    "prism-react-renderer": "^1.2.1",
+    "prop-types": "^15.8.1",
     "react": "16.14.0",
     "react-device-detect": "1.15.0",
     "react-dom": "16.14.0",
     "react-image-lightbox": "5.1.1",
     "theme-ui": "0.3.1",
+    "webpack": "^5.66.0",
     "workbox-routing": "5.0.0",
     "workbox-strategies": "5.0.0",
     "wts": "https://github.com/webiny/wts#2811da54b0b21e61dc79cf63509d1165f95a2308"
