--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ website/.yarn/*
 !website/.yarn/sdks
 !website/.yarn/versions
 website/.pnp.*
+
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
