fix: update README and copy _redirects file in the build command [no ci]

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
-    "postbuild": "cp _redirects build",
+    "build": "docusaurus build && cp _redirects build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
