chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,14 @@ dist
 
 # Local Netlify folder
 .netlify
+
+# Jetbrains files
+.idea
+
+# yarn2 files
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
