chore: enable yarn 3 [skip ci]

--- a/package.json
+++ b/package.json
@@ -66,5 +66,6 @@
     "eslint-plugin-react-hooks": "2.x",
     "glyphhanger": "^4.0.1",
     "prettier": "^2.5.0"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
