fix(pages): add redirect

--- a/vercel.json
+++ b/vercel.json
@@ -920,6 +920,11 @@
         "source": "/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark",
         "destination": "/docs/performance-and-load-benchmark/introduction",
         "permanent": true
+      },
+      {
+        "source": "/docs/page-builder/extending/docs/page-builder/references/plugins",
+        "destination": "/docs/page-builder/references/plugins",
+        "permanent": true
       }
   ]
 }
