wip: create prepare-release-notes script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export",
-    "format": "prettier '{src,remark,scripts}/**/*.{css,js,mdx}' --write"
+    "format": "prettier '{src,remark,scripts}/**/*.{css,js,mdx}' --write",
+    "prepare-release-notes": "node scripts/prepareReleaseNotes.js"
   },
   "browserslist": [
     "> 1%"
@@ -64,8 +65,14 @@
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "2.x",
+    "execa": "^5.0.0",
     "glyphhanger": "^4.0.1",
-    "prettier": "^2.5.0"
+    "inquirer": "^8.2.4",
+    "ncp": "^2.0.0",
+    "prettier": "^2.5.0",
+    "replace-in-path": "^1.1.0",
+    "semver": "^7.3.7",
+    "semver-sort": "^1.0.0"
   },
   "packageManager": "yarn@3.2.0"
 }
