--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "front-matter": "^4.0.2",
     "minimatch": "^3.0.4",
     "next": "^12.0.7",
+    "node-gyp": "^9.0.0",
     "postcss": "^8.4.5",
     "postcss-focus-visible": "^5.0.0",
     "postcss-import": "^14.0.1",
