--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^1.0.6",
     "@juggle/resize-observer": "^3.2.0",
     "@mdx-js/loader": "^1.6.21",
+    "@mdx-js/react": "^1.6.22",
     "@next/bundle-analyzer": "^9.4.4",
     "@next/mdx": "^10.0.1",
     "@reach/alert": "^0.16.0",
