--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "dependencies": {
     "@badrap/bar-of-progress": "^0.1.1",
-    "@docsearch/react": "1.0.0-alpha.27",
+    "@docsearch/react": "^3.1.1",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@juggle/resize-observer": "^3.2.0",
