--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "> 1%"
   ],
   "dependencies": {
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.6",
     "@badrap/bar-of-progress": "^0.1.1",
     "@docsearch/react": "^3.1.1",
     "@headlessui/react": "^1.6.5",
@@ -66,12 +69,14 @@
     "tailwindcss": "^3.0.15",
     "tinytime": "^0.2.6",
     "walk": "^2.3.15",
-    "wts": "https://github.com/webiny/wts#2811da54b0b21e61dc79cf63509d1165f95a2308"
+    "wts": "https://github.com/webiny/wts#2811da54b0b21e61dc79cf63509d1165f95a2308",
+    "load-json-file": "^6.2.0",
+    "prettier": "^2.5.0",
+    "replace-in-path": "^1.1.0",
+    "semver": "^7.3.7",
+    "write-json-file": "^4.3.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/register": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
@@ -86,12 +91,7 @@
     "execa": "^5.0.0",
     "glyphhanger": "^4.0.1",
     "inquirer": "^8.2.4",
-    "load-json-file": "^6.2.0",
-    "ncp": "^2.0.0",
-    "prettier": "^2.5.0",
-    "replace-in-path": "^1.1.0",
-    "semver": "^7.3.7",
-    "write-json-file": "^4.3.0"
+    "ncp": "^2.0.0"
   },
   "packageManager": "yarn@3.2.0"
 }
