--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepare-docs": "node scripts/prepareDocs.js",
     "build": "yarn prepare-docs && next build",
     "start": "next start",
-    "export": "next build && next export",
+    "export": "yarn build && next export",
     "format": "prettier '{src,remark,scripts}/**/*.{css,js,mdx}' --write",
     "prepare-release-notes": "node scripts/prepareReleaseNotes.js"
   },
@@ -50,6 +50,7 @@
     "fs-extra": "^9.1.0",
     "globby": "^11.1.0",
     "jsdom": "^20.0.0",
+    "load-json-file": "^6.2.0",
     "minimatch": "^3.0.4",
     "next": "^12.0.7",
     "node-gyp": "^9.0.0",
@@ -57,6 +58,7 @@
     "postcss": "^8.4.5",
     "postcss-focus-visible": "^5.0.0",
     "postcss-import": "^14.0.1",
+    "prettier": "^2.5.0",
     "prismjs": "^1.25.0",
     "prompt-sync": "^4.2.0",
     "react": "^17.0.2",
@@ -64,17 +66,15 @@
     "react-image-lightbox": "^5.1.4",
     "react-tabs": "^3.2.3",
     "redent": "^3.0.0",
+    "replace-in-path": "^1.1.0",
     "rimraf": "^3.0.2",
+    "semver": "^7.3.7",
     "simple-functional-loader": "^1.2.1",
     "tailwindcss": "^3.0.15",
     "tinytime": "^0.2.6",
     "walk": "^2.3.15",
-    "wts": "https://github.com/webiny/wts#2811da54b0b21e61dc79cf63509d1165f95a2308",
-    "load-json-file": "^6.2.0",
-    "prettier": "^2.5.0",
-    "replace-in-path": "^1.1.0",
-    "semver": "^7.3.7",
-    "write-json-file": "^4.3.0"
+    "write-json-file": "^4.3.0",
+    "wts": "https://github.com/webiny/wts#2811da54b0b21e61dc79cf63509d1165f95a2308"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "2.x",
