--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "private": true,
-  "name": "docs",
   "version": "1.0.0",
   "scripts": {
     "dev": "yarn prepare-docs && concurrently \"node scripts/watchDocs.js\" \"next dev\"",
@@ -35,6 +34,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "@webiny/properties": "link:./packages/properties",
     "autoprefixer": "^10.4.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "brotli-size": "^4.0.0",
     "chokidar": "^3.5.3",
     "classnames": "^2.3.1",
@@ -43,7 +43,6 @@
     "deasync": "^0.1.20",
     "debounce": "^1.2.0",
     "dlv": "^1.1.3",
-    "docs": "link:.",
     "file-loader": "^6.0.0",
     "focus-visible": "^5.1.0",
     "front-matter": "^4.0.2",
