--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "autoprefixer": "^10.4.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "brotli-size": "^4.0.0",
+    "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "classnames": "^2.3.1",
     "clean-css": "^4.2.3",
