--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "simple-functional-loader": "^1.2.1",
     "tailwindcss": "^3.0.15",
     "tinytime": "^0.2.6",
+    "titlecase": "^1.1.3",
     "walk": "^2.3.15",
     "write-json-file": "^4.3.0",
     "wts": "https://github.com/webiny/wts#2811da54b0b21e61dc79cf63509d1165f95a2308"
