--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next": "^12.0.7",
     "node-gyp": "^9.0.0",
     "p-map": "4.0.0",
+    "p-retry": "^4.6.2",
     "postcss": "^8.4.5",
     "postcss-focus-visible": "^5.0.0",
     "postcss-import": "^14.0.1",
