feat: create temporary WIP page for PB migration

--- a/vercel.json
+++ b/vercel.json
@@ -925,6 +925,10 @@
         "source": "/docs/page-builder/extending/docs/page-builder/references/plugins",
         "destination": "/docs/page-builder/references/plugins",
         "permanent": true
+      } ,   {
+        "source": "/docs/page-builder-rendering-upgrade",
+        "destination": "/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration",
+        "permanent": true
       }
   ]
 }
