--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@sindresorhus/slugify": "^1.1.0",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@webiny/properties": "link:./packages/properties",
+    "@webiny/react-properties": "^5.34.1",
     "autoprefixer": "^10.4.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "brotli-size": "^4.0.0",
