wip: create PB Elements migration doc

--- a/vercel.json
+++ b/vercel.json
@@ -929,6 +929,11 @@
       "source": "/docs/page-builder-rendering-upgrade",
       "destination": "/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration",
       "permanent": true
+    },
+    {
+      "source": "/docs/release-notes/5.34.0/page-elements-migration/upgrade-guide",
+      "destination": "/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration",
+      "permanent": true
     }
   ]
 }
