fix: eslint and prettier run and code fixes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "export": "yarn build && next export",
     "format": "prettier '{src,remark,scripts}/**/*.{css,js,mdx}' --write",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0 --fix",
-    "prepare-release-notes": "node scripts/prepareReleaseNotes.js"
+    "prepare-release-notes": "node scripts/prepareReleaseNotes.js",
+    "lint:fix": "yarn format && yarn eslint"
   },
   "browserslist": [
     "> 1%"
