docs: removed user guides from draft status, enable robots, redirects /docs/user-guides to /docs/user-guides

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,11 @@
       "permanent": true
     },
     {
+      "source": "/docs/user-guides",
+      "destination": "/docs/user-guides/overview",
+      "permanent": true
+    },
+    {
       "source": "/docs/webiny/introduction",
       "destination": "/docs/get-started/install-webiny",
       "permanent": true
