wip: add additional upgrade guide notes

--- a/vercel.json
+++ b/vercel.json
@@ -939,6 +939,21 @@
       "source": "/docs/release-notes/5.34.0/page-elements-migration/upgrade-guide",
       "destination": "/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration",
       "permanent": true
+    },
+    {
+      "source": "/docs/m/5.35.0/custom-key-migration",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#TODO",
+      "permanent": true
+    },
+    {
+      "source": "/docs/m/5.35.0/typography-manual-migration",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#TODO",
+      "permanent": true
+    },
+    {
+      "source": "/docs/m/5.35.0/custom-emotion-plugins",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#TODO",
+      "permanent": true
     }
   ]
 }
