fix: update redirect

--- a/vercel.json
+++ b/vercel.json
@@ -941,6 +941,11 @@
       "permanent": true
     },
     {
+      "source": "/docs/m/5.35.0/custom-emotion-plugins",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#custom-babel-plugins-for-emotion",
+      "permanent": true
+    },
+    {
       "source": "/docs/m/5.35.0/custom-key-migration",
       "destination": "/docs/release-notes/5.35.0/upgrade-guide#TODO",
       "permanent": true
@@ -950,10 +955,6 @@
       "destination": "/docs/release-notes/5.35.0/upgrade-guide#TODO",
       "permanent": true
     },
-    {
-      "source": "/docs/m/5.35.0/custom-emotion-plugins",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#TODO",
-      "permanent": true
-    }
+
   ]
 }
