wip: add additional upgrade guide notes

--- a/vercel.json
+++ b/vercel.json
@@ -947,12 +947,12 @@
     },
     {
       "source": "/docs/m/5.35.0/custom-key-migration",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#TODO",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#theming-related-updates",
       "permanent": true
     },
     {
       "source": "/docs/m/5.35.0/typography-manual-migration",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#TODO",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#theming-related-updates",
       "permanent": true
     },
 
