wip: add three items

--- a/vercel.json
+++ b/vercel.json
@@ -941,18 +941,18 @@
       "permanent": true
     },
     {
-      "source": "/docs/m/5.35.0/custom-emotion-plugins",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#custom-babel-plugins-for-emotion",
+      "source": "/docs/5.35.0/custom-emotion-plugins",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#custom-babel-plugins",
       "permanent": true
     },
     {
-      "source": "/docs/m/5.35.0/custom-key-migration",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#website-theme-object",
+      "source": "/docs/5.35.0/custom-key-migration",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#theme-object",
       "permanent": true
     },
     {
-      "source": "/docs/m/5.35.0/typography-manual-migration",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#website-theme-object",
+      "source": "/docs/5.35.0/typography-manual-migration",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#theme-object",
       "permanent": true
     }
   ]
