wip: add additional upgrade guide notes

--- a/vercel.json
+++ b/vercel.json
@@ -942,17 +942,17 @@
     },
     {
       "source": "/docs/5.35.0/custom-emotion-plugins",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#custom-babel-plugins",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#found-custom-emotion-plugins-in-your-project-please-make-sure-to-update-them-to-the-latest-version",
       "permanent": true
     },
     {
       "source": "/docs/5.35.0/custom-key-migration",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#theme-object",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#custom-key-webiny-pb-typography-body-could-not-be-migrated",
       "permanent": true
     },
     {
       "source": "/docs/5.35.0/typography-manual-migration",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#theme-object",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#could-not-migrate-all-typography-related-code",
       "permanent": true
     }
   ]
