fix: add troubleshooting

--- a/vercel.json
+++ b/vercel.json
@@ -941,18 +941,18 @@
       "permanent": true
     },
     {
+      "source": "/5.35.0/typography-variant-paragraph-categorization",
+      "destination": "#typography-variant-was-categorized-as-a-paragraph-double-check-if-a-different-category-is-more-appropriate",
+      "permanent": true
+    },
+    {
+      "source": "/docs/5.35.0/partially-migrated-theme-object-typography)",
+      "destination": "#could-not-migrate-some-of-the-theme-object-s-typography-related-code",
+      "permanent": true
+    },
+    {
       "source": "/docs/5.35.0/custom-emotion-plugins",
       "destination": "/docs/release-notes/5.35.0/upgrade-guide#found-custom-emotion-plugins-in-your-project-please-make-sure-to-update-them-to-the-latest-version",
-      "permanent": true
-    },
-    {
-      "source": "/docs/5.35.0/custom-key-migration",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#custom-key-webiny-pb-typography-body-could-not-be-migrated",
-      "permanent": true
-    },
-    {
-      "source": "/docs/5.35.0/typography-manual-migration",
-      "destination": "/docs/release-notes/5.35.0/upgrade-guide#could-not-migrate-all-typography-related-code",
       "permanent": true
     }
   ]
