--- a/vercel.json
+++ b/vercel.json
@@ -946,7 +946,7 @@
       "permanent": true
     },
     {
-      "source": "/docs/5.35.0/partially-migrated-theme-object-typography)",
+      "source": "/docs/5.35.0/partially-migrated-theme-object-typography",
       "destination": "#could-not-migrate-some-of-the-theme-object-s-typography-related-code",
       "permanent": true
     },
