fix: correct `destination` properties

--- a/vercel.json
+++ b/vercel.json
@@ -942,12 +942,12 @@
     },
     {
       "source": "/5.35.0/typography-variant-paragraph-categorization",
-      "destination": "#typography-variant-was-categorized-as-a-paragraph-double-check-if-a-different-category-is-more-appropriate",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#typography-variant-was-categorized-as-a-paragraph-double-check-if-a-different-category-is-more-appropriate",
       "permanent": true
     },
     {
       "source": "/docs/5.35.0/partially-migrated-theme-object-typography",
-      "destination": "#could-not-migrate-some-of-the-theme-object-s-typography-related-code",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#could-not-migrate-some-of-the-theme-object-s-typography-related-code",
       "permanent": true
     },
     {
