fix: add warnings about legacy rendering engine

--- a/vercel.json
+++ b/vercel.json
@@ -954,6 +954,11 @@
       "source": "/docs/5.35.0/custom-emotion-plugins",
       "destination": "/docs/release-notes/5.35.0/upgrade-guide#found-custom-emotion-plugins-in-your-project-please-make-sure-to-update-them-to-the-latest-version",
       "permanent": true
+    },
+    {
+      "source": "/5.35.0/page-builder-rendering-upgrade",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#some-of-the-theme-related-upgrades-were-not-applied-because-you-are-using-an-older-version-of-the-page-builder-rendering-engine",
+      "permanent": true
     }
   ]
 }
