--- a/vercel.json
+++ b/vercel.json
@@ -939,6 +939,26 @@
       "source": "/docs/release-notes/5.34.0/page-elements-migration/upgrade-guide",
       "destination": "/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration",
       "permanent": true
+    },
+    {
+      "source": "/5.35.0/typography-variant-paragraph-categorization",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#typography-variant-was-categorized-as-a-paragraph-double-check-if-a-different-category-is-more-appropriate",
+      "permanent": true
+    },
+    {
+      "source": "/docs/5.35.0/partially-migrated-theme-object-typography",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#could-not-migrate-some-of-the-theme-object-s-typography-related-code",
+      "permanent": true
+    },
+    {
+      "source": "/docs/5.35.0/custom-emotion-plugins",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#found-custom-emotion-plugins-in-your-project-please-make-sure-to-update-them-to-the-latest-version",
+      "permanent": true
+    },
+    {
+      "source": "/5.35.0/page-builder-rendering-upgrade",
+      "destination": "/docs/release-notes/5.35.0/upgrade-guide#some-of-the-theme-related-upgrades-were-not-applied-because-you-are-using-an-older-version-of-the-page-builder-rendering-engine",
+      "permanent": true
     }
   ]
 }
