--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "globby": "^11.1.0",
     "jsdom": "^20.0.0",
     "load-json-file": "^6.2.0",
+    "lodash.memoize": "^4.1.2",
     "minimatch": "^3.0.4",
     "next": "^12.0.7",
     "node-gyp": "^9.0.0",
