fix: move code highlight to the client side

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dev": "yarn prepare-docs && concurrently \"node scripts/watchDocs.js\" \"next dev\"",
     "prepare-docs": "node scripts/prepareDocs.js",
     "build": "yarn prepare-docs && next build",
+    "build:next": "next build",
+    "dev:next": "next dev",
     "start": "next start",
     "export": "yarn build && next export",
     "format": "prettier '{src,remark,scripts}/**/*.{css,js,mdx}' --write",
@@ -24,7 +26,6 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@juggle/resize-observer": "^3.2.0",
-    "@mdx-js/loader": "^1.6.21",
     "@mdx-js/react": "^1.6.22",
     "@next/bundle-analyzer": "^9.4.4",
     "@next/mdx": "^10.0.1",
