--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@juggle/resize-observer": "^3.2.0",
+    "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/bundle-analyzer": "^9.4.4",
-    "@next/mdx": "^10.0.1",
+    "@next/mdx": "^12.3.3",
     "@reach/alert": "^0.16.0",
     "@reach/rect": "^0.10.5",
     "@silvenon/remark-smartypants": "^1.0.0",
