--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "private": true,
   "version": "1.0.0",
+  "workspaces": [
+    "./generator"
+  ],
   "scripts": {
     "dev": "yarn prepare-docs && concurrently \"node scripts/watchDocs.js\" \"next dev\"",
+    "dev:new": "yarn generate && next dev",
     "prepare-docs": "node scripts/prepareDocs.js",
+    "generate": "node generator",
     "build": "yarn prepare-docs && next build",
     "build:next": "next build",
     "dev:next": "next dev",
@@ -57,7 +62,7 @@
     "load-json-file": "^6.2.0",
     "lodash.memoize": "^4.1.2",
     "minimatch": "^3.0.4",
-    "next": "^12.0.7",
+    "next": "12.0.7",
     "node-gyp": "^9.0.0",
     "p-map": "4.0.0",
     "p-retry": "^4.6.2",
@@ -84,6 +89,7 @@
     "wts": "https://github.com/webiny/wts#ae82e59470d79dc448a74239bf9d2328f4b93499"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.4",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
@@ -98,7 +104,9 @@
     "execa": "^5.0.0",
     "glyphhanger": "^4.0.1",
     "inquirer": "^8.2.4",
-    "ncp": "^2.0.0"
+    "jest": "^29.6.4",
+    "ncp": "^2.0.0",
+    "ts-jest": "^29.1.1"
   },
   "packageManager": "yarn@3.2.0"
 }
