wip: simple document root watch and assets

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "dev": "yarn prepare-docs && concurrently \"node scripts/watchDocs.js\" \"next dev\"",
-    "dev:new": "yarn generate && next dev",
+    "dev:new": "yarn generate && concurrently \"yarn generate --watchOnly\" \"next dev\"",
     "prepare-docs": "node scripts/prepareDocs.js",
     "generate": "node generator",
     "build": "yarn prepare-docs && next build",
