--- a/generator/package.json
+++ b/generator/package.json
@@ -16,6 +16,7 @@
     "globby": "^11.1.0",
     "jsdom": "^20.0.0",
     "load-json-file": "^6.2.0",
+    "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "write-json-file": "^4.3.0",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.5.4",
+    "@types/md5": "^2.3.4",
     "@types/yargs": "^17.0.8",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
