wip: lexical tools article

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier '{src,remark,scripts}/**/*.{css,js,mdx}' --write",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0 --fix",
     "prepare-release-notes": "node scripts/prepareReleaseNotes.js",
-    "lint:fix": "yarn format && yarn eslint"
+    "lint:fix": "yarn format && yarn eslint",
+    "get-article-id": "node -e 'console.log(require(\"@webiny/utils\").mdbid().slice(-8))'"
   },
   "browserslist": [
     "> 1%"
@@ -36,7 +37,9 @@
     "@sindresorhus/slugify": "^1.1.0",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@webiny/react-properties": "unstable",
+    "@webiny/react-composition": "^5.37.8",
+    "@webiny/react-properties": "^5.37.8",
+    "@webiny/utils": "^5.37.8",
     "autoprefixer": "^10.4.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "brotli-size": "^4.0.0",
