--- a/generator/package.json
+++ b/generator/package.json
@@ -23,6 +23,7 @@
     "yargs": "^17.3.1"
   },
   "devDependencies": {
+    "@types/debounce": "^1.2.3",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.5.4",
     "@types/md5": "^2.3.4",
