--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "format": "prettier '{src,remark,scripts}/**/*.{css,js,mdx}' --write",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0 --fix",
     "prepare-release-notes": "node scripts/prepareReleaseNotes.js",
-    "lint:fix": "yarn format && yarn eslint"
+    "lint:fix": "yarn format && yarn eslint",
+    "get-id": "node -e 'console.log(require(\"@webiny/utils\").mdbid().slice(-8))'"
   },
   "browserslist": [
     "> 1%"
@@ -41,7 +42,9 @@
     "@sindresorhus/slugify": "^1.1.0",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/typography": "^0.5.0",
-    "@webiny/react-properties": "unstable",
+    "@webiny/react-composition": "latest",
+    "@webiny/react-properties": "latest",
+    "@webiny/utils": "latest",
     "autoprefixer": "^10.4.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "brotli-size": "^4.0.0",
@@ -90,6 +93,8 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.22",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "babel-eslint": "10.x",
@@ -108,5 +113,9 @@
     "ncp": "^2.0.0",
     "ts-jest": "^29.1.1"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "resolutions": {
+    "@types/react": "17.0.39",
+    "@types/react-dom": "17.0.22"
+  }
 }
