wip: extract library and export classes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "yarn prepare-docs && concurrently \"node scripts/watchDocs.js\" \"next dev\"",
     "dev:new": "yarn generate && concurrently \"yarn generate --watchOnly\" \"next dev\"",
     "prepare-docs": "node scripts/prepareDocs.js",
-    "generate": "node generator",
+    "generate": "rimraf src/pages/docs && node generateDocs.js",
     "build": "yarn prepare-docs && next build",
     "build:next": "next build",
     "dev:next": "next dev",
