--- a/generator/package.json
+++ b/generator/package.json
@@ -1,14 +1,17 @@
 {
   "private": true,
-  "name": "generator",
+  "name": "@webiny/docs-generator",
   "version": "0.0.0",
   "sideEffects": false,
-  "bin": "./src/index.js",
   "main": "./src/index.js",
+  "exports": {
+    "default": "./src/index.ts"
+  },
   "scripts": {
     "test": "jest --config=jest.config.js src/**/*.test.ts"
   },
   "dependencies": {
+    "@babel/parser": "^7.23.3",
     "chalk": "^4.1.0",
     "debounce": "^1.2.0",
     "execa": "^5.1.1",
@@ -19,6 +22,7 @@
     "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "unist-util-visit": "^2.0.3",
     "write-json-file": "^4.3.0",
     "yargs": "^17.3.1"
   },
