--- a/generator/tsconfig.json
+++ b/generator/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig/tsconfig.json",
+  "extends": "../tsconfig/tsconfig.json",
   "include": ["./src"],
   "compilerOptions": {
     "rootDirs": ["."],
