--- a/tsconfig/tsconfig.json
+++ b/tsconfig/tsconfig.json
@@ -14,8 +14,7 @@
     "compilerOptions": {
       "skipLibCheck": true,
       "esModuleInterop": true,
-      "module": "commonjs",
-      "jsx": "react-jsx"
+      "module": "commonjs"
     }
   }
 }
