--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "./generator"
   ],
   "scripts": {
-    "dev": "yarn generate && concurrently \"yarn generate --watchOnly\" \"next dev\"",
+    "dev": "NODE_ENV=development yarn generate && concurrently \"NODE_ENV=development yarn generate --watchOnly\" \"next dev\"",
     "prepare-docs": "node scripts/prepareDocs.js",
     "generate": "node generateDocs.js",
-    "build": "yarn prepare-docs && next build",
+    "build": "yarn generate && next build",
     "build:next": "next build",
     "dev:next": "next dev",
     "start": "next start",
