--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "./generator"
   ],
   "scripts": {
-    "dev": "NODE_ENV=development yarn generate && concurrently \"NODE_ENV=development yarn generate --watchOnly\" \"next dev\"",
+    "dev": "./scripts/dev.sh",
     "generate": "node generateDocs.js",
     "build": "yarn generate && next build",
     "build:next": "next build",
@@ -39,7 +39,7 @@
     "@silvenon/remark-smartypants": "^1.0.0",
     "@sindresorhus/slugify": "^1.1.0",
     "@svgr/webpack": "^5.5.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/typography": "0.5.2",
     "@webiny/react-composition": "latest",
     "@webiny/react-properties": "latest",
     "@webiny/utils": "latest",
@@ -82,7 +82,7 @@
     "rimraf": "^3.0.2",
     "semver": "^7.3.7",
     "simple-functional-loader": "^1.2.1",
-    "tailwindcss": "^3.0.15",
+    "tailwindcss": "3.1.4",
     "tinytime": "^0.2.6",
     "titlecase": "^1.1.3",
     "walk": "^2.3.15",
