--- a/vercel.json
+++ b/vercel.json
@@ -941,7 +941,7 @@
       "permanent": true
     },
     {
-      "source": "/5.35.0/typography-variant-paragraph-categorization",
+      "source": "/docs/5.35.0/typography-variant-paragraph-categorization",
       "destination": "/docs/release-notes/5.35.0/upgrade-guide#typography-variant-was-categorized-as-a-paragraph-double-check-if-a-different-category-is-more-appropriate",
       "permanent": true
     },
@@ -956,8 +956,28 @@
       "permanent": true
     },
     {
-      "source": "/5.35.0/page-builder-rendering-upgrade",
+      "source": "/docs/5.35.0/page-builder-rendering-upgrade",
       "destination": "/docs/release-notes/5.35.0/upgrade-guide#some-of-the-theme-related-upgrades-were-not-applied-because-you-are-using-an-older-version-of-the-page-builder-rendering-engine",
+      "permanent": true
+    },
+    {
+      "source": "/docs/admin-area/extending/cognito-federation",
+      "destination": "/docs/enterprise/cognito-federation",
+      "permanent": true
+    },
+    {
+      "source": "/docs/5.39.x/admin-area/extending/cognito-federation",
+      "destination": "/docs/5.39.x/enterprise/cognito-federation",
+      "permanent": true
+    },
+    {
+      "source": "/docs/5.38.x/admin-area/extending/cognito-federation",
+      "destination": "/docs/5.38.x/enterprise/cognito-federation",
+      "permanent": true
+    },
+    {
+      "source": "/docs/5.37.x/admin-area/extending/cognito-federation",
+      "destination": "/docs/5.37.x/enterprise/cognito-federation",
       "permanent": true
     }
   ]
