feat: create 5.40.0 release notes

--- a/vercel.json
+++ b/vercel.json
@@ -576,6 +576,11 @@
       "permanent": true
     },
     {
+      "source": "/docs/core-development-concepts/basics/plugins",
+      "destination": "/docs/core-development-concepts/basics/extensions",
+      "permanent": true
+    },
+    {
       "source": "/docs/key-topics/tools-libraries",
       "destination": "/docs/core-development-concepts/basics/tools-and-libraries",
       "permanent": true
@@ -583,6 +588,11 @@
     {
       "source": "/docs/how-to-guides/importing-plugins",
       "destination": "/docs/core-development-concepts/basics/importing-plugins",
+      "permanent": true
+    },
+    {
+      "source": "/docs/core-development-concepts/basics/importing-plugins",
+      "destination": "/docs/core-development-concepts/basics/extensions",
       "permanent": true
     },
     {
