fix: update links on welcome page

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@sindresorhus/slugify": "^1.1.0",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/typography": "0.5.2",
-    "@webiny/react-composition": "latest",
-    "@webiny/react-properties": "latest",
+    "@webiny/react-composition": "^5.39.6",
+    "@webiny/react-properties": "^5.39.6",
     "@webiny/utils": "latest",
     "autoprefixer": "^10.4.0",
     "babel-plugin-module-resolver": "^4.1.0",
