fix: remove new app tutorial

--- a/vercel.json
+++ b/vercel.json
@@ -989,6 +989,41 @@
       "source": "/docs/5.37.x/admin-area/extending/cognito-federation",
       "destination": "/docs/5.37.x/enterprise/cognito-federation",
       "permanent": true
+    },
+    {
+      "source": "/docs/admin-area/new-app-tutorial/introduction",
+      "destination": "/docs/5.39.x/admin-area/new-app-tutorial/introduction",
+      "permanent": true
+    },
+    {
+      "source": "/docs/admin-area/new-app-tutorial/scaffolding",
+      "destination": "/docs/5.39.x/admin-area/new-app-tutorial/scaffolding",
+      "permanent": true
+    },
+    {
+      "source": "/docs/admin-area/new-app-tutorial/get-started",
+      "destination": "/docs/5.39.x/admin-area/new-app-tutorial/get-started",
+      "permanent": true
+    },
+    {
+      "source": "/docs/admin-area/new-app-tutorial/extending-entities",
+      "destination": "/docs/5.39.x/admin-area/new-app-tutorial/extending-entities",
+      "permanent": true
+    },
+    {
+      "source": "/docs/admin-area/new-app-tutorial/security",
+      "destination": "/docs/5.39.x/admin-area/new-app-tutorial/security",
+      "permanent": true
+    },
+    {
+      "source": "/docs/admin-area/new-app-tutorial/securing-graphql-api",
+      "destination": "/docs/5.39.x/admin-area/new-app-tutorial/securing-graphql-api",
+      "permanent": true
+    },
+    {
+      "source": "/docs/admin-area/new-app-tutorial/securing-client-app",
+      "destination": "/docs/5.39.x/admin-area/new-app-tutorial/securing-client-app",
+      "permanent": true
     }
   ]
 }
