fix: whitelist Vercel redirects in LinkValidator

--- a/tsconfig/tsconfig.build.json
+++ b/tsconfig/tsconfig.build.json
@@ -13,6 +13,7 @@
     "noEmit": false,
     "jsx": "react-jsx",
     "emitDeclarationOnly": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "plugins": [
       {
