--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
     "lint:fix": "yarn format && yarn eslint",
     "get-id": "node -e 'console.log(require(\"@webiny/utils\").mdbid().slice(-8))'"
   },
-  "browserslist": [
-    "> 1%"
-  ],
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">1%",
+      "not op_mini all",
+      "ie 11"
+    ]
+  },
   "dependencies": {
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
