feat: create 5.41.0 docs

--- a/vercel.json
+++ b/vercel.json
@@ -1024,6 +1024,21 @@
       "source": "/docs/admin-area/new-app-tutorial/securing-client-app",
       "destination": "/docs/5.39.x/admin-area/new-app-tutorial/securing-client-app",
       "permanent": true
+    },
+    {
+      "source": "/docs/core-development-concepts/security-framework/introduction",
+      "destination": "/docs/security/security-framework/introduction",
+      "permanent": true
+    },
+    {
+      "source": "/docs/core-development-concepts/security-framework/api-security",
+      "destination": "/docs/security/security-framework/api-security",
+      "permanent": true
+    },
+    {
+      "source": "/docs/core-development-concepts/security-framework/react-security",
+      "destination": "/docs/security/security-framework/react-security",
+      "permanent": true
     }
   ]
 }
