--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "rimraf": "^3.0.2",
     "semver": "^7.3.7",
     "simple-functional-loader": "^1.2.1",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^3.4.17",
     "tinytime": "^0.2.6",
     "titlecase": "^1.1.3",
     "walk": "^2.3.15",
