chore: update next to last possible v12

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "load-json-file": "^6.2.0",
     "lodash.memoize": "^4.1.2",
     "minimatch": "^3.0.4",
-    "next": "12.0.7",
+    "next": "12.3.4",
     "node-gyp": "^9.0.0",
     "p-map": "4.0.0",
     "p-retry": "^4.6.2",
@@ -99,8 +99,8 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.22",
+    "@types/react": "^17.0.83",
+    "@types/react-dom": "^17.0.26",
     "@types/semver": "^7.5.5",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
@@ -122,7 +122,9 @@
   },
   "packageManager": "yarn@3.2.0",
   "resolutions": {
-    "@types/react": "17.0.39",
-    "@types/react-dom": "17.0.22"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "@types/react": "^17.0.83",
+    "@types/react-dom": "^17.0.26"
   }
 }
