--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0 --fix",
     "prepare-release-notes": "node scripts/prepareReleaseNotes.js",
     "lint:fix": "yarn format && yarn eslint",
-    "get-id": "node -e 'console.log(require(\"@webiny/utils\").mdbid().slice(-8))'"
+    "get-id": "node -e 'console.log(require(\"@webiny/utils\").mdbid().slice(-8))'",
+    "validate:mdx": "tsx scripts/validate-mdx-pairing.ts"
   },
   "browserslist": {
     "development": [
@@ -117,7 +118,8 @@
     "inquirer": "^8.2.4",
     "jest": "^29.6.4",
     "ncp": "^2.0.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.21.0"
   },
   "packageManager": "yarn@3.2.0",
   "resolutions": {
