--- a/generator/package.json
+++ b/generator/package.json
@@ -21,8 +21,8 @@
     "jsdom": "^20.0.0",
     "load-json-file": "^6.2.0",
     "md5": "^2.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "unist-util-visit": "^2.0.3",
     "write-json-file": "^4.3.0",
     "yargs": "^17.3.1"
