--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "@sindresorhus/slugify": "^1.1.0",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/typography": "0.5.2",
-    "@webiny/react-composition": "^5.39.6",
-    "@webiny/react-properties": "^5.39.6",
-    "@webiny/utils": "latest",
+    "@webiny/react-composition": "^5.44.0",
+    "@webiny/react-properties": "^5.44.0",
+    "@webiny/utils": "^5.44.0",
     "autoprefixer": "^10.4.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "brotli-size": "^4.0.0",
@@ -70,7 +70,7 @@
     "load-json-file": "^6.2.0",
     "lodash.memoize": "^4.1.2",
     "minimatch": "^3.0.4",
-    "next": "12.3.4",
+    "next": "^15.5.12",
     "node-gyp": "^9.0.0",
     "p-map": "4.0.0",
     "p-retry": "^4.6.2",
@@ -80,10 +80,10 @@
     "prettier": "^2.5.0",
     "prismjs": "^1.25.0",
     "prompt-sync": "^4.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-image-lightbox": "^5.1.4",
-    "react-tabs": "^3.2.3",
+    "react-tabs": "^6.1.0",
     "redent": "^3.0.0",
     "replace-in-path": "^1.1.0",
     "rimraf": "^3.0.2",
@@ -98,8 +98,8 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
-    "@types/react": "^17.0.83",
-    "@types/react-dom": "^17.0.26",
+    "@types/react": "^18.3.28",
+    "@types/react-dom": "^18.3.7",
     "@types/semver": "^7.5.5",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
@@ -120,9 +120,6 @@
   },
   "packageManager": "yarn@3.2.0",
   "resolutions": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@types/react": "^17.0.83",
-    "@types/react-dom": "^17.0.26"
+    "@types/react": "18.3.28"
   }
 }
