--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "front-matter": "^4.0.2",
     "fs-extra": "^9.1.0",
     "globby": "^11.1.0",
-    "jsdom": "^20.0.0",
     "load-json-file": "^6.2.0",
     "lodash.memoize": "^4.1.2",
     "minimatch": "^3.0.4",
@@ -84,6 +83,7 @@
     "react-dom": "18.2.0",
     "react-image-lightbox": "^5.1.4",
     "react-tabs": "^6.1.0",
+    "react-test-renderer": "18.2.0",
     "redent": "^3.0.0",
     "replace-in-path": "^1.1.0",
     "rimraf": "^3.0.2",
@@ -100,6 +100,7 @@
     "@types/jest": "^29.5.4",
     "@types/react": "^18.3.28",
     "@types/react-dom": "^18.3.7",
+    "@types/react-test-renderer": "18.3.1",
     "@types/semver": "^7.5.5",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
