fix: use rewrite to public folder to serve mdx

--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ build
 /src/data/
 /src/pages/docs/
 /public/algolia/sitemap.xml
-/public/raw/
+/public/docs-static/raw/
 # Mac files
 .DS_Store
 
